Fix List.of, Set.of and Map.of usage