@@ -14,6 +14,7 @@ import org.junit.Assert;
 import org.junit.Test;
 
 import java.lang.annotation.Annotation;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -37,7 +38,7 @@ public class TestPostPersist extends TestBase {
 
     @Test
     public void testCallback() {
-        getMapper().map(List.of(NestedEventEntity.class, Inner.class));
+        getMapper().map(Arrays.asList(NestedEventEntity.class, Inner.class));
         MorphiaCodec<NestedEventEntity> codec = (MorphiaCodec<NestedEventEntity>) getMapper().getCodecRegistry()
                                                                                              .get(NestedEventEntity.class);
         Map<Class<? extends Annotation>, List<ClassMethodPair>> lifecycleMethods = codec.getEntityModel().getLifecycleMethods();
