@@ -19,8 +19,7 @@ public class ConditionalExpressionsTest extends ExpressionsTestBase {
 
     @Test
     public void testSwitchExpression() {
-        getDatabase().getCollection("grades").insertMany(List.of(
-            parse("{ '_id' : 1, 'name' : 'Susan Wilkes', 'scores' : [ 87, 86, 78 ] }"),
+        getDatabase().getCollection("grades").insertMany(java.util.Arrays.asList(parse("{ '_id' : 1, 'name' : 'Susan Wilkes', 'scores' : [ 87, 86, 78 ] }"),
             parse("{ '_id' : 2, 'name' : 'Bob Hanna', 'scores' : [ 71, 64, 81 ] }"),
             parse("{ '_id' : 3, 'name' : 'James Torrelio', 'scores' : [ 91, 84, 97 ] }")));
 
@@ -40,8 +39,7 @@ public class ConditionalExpressionsTest extends ExpressionsTestBase {
                                        .execute(Document.class)
                                        .toList();
 
-        List<Document> expected = List.of(
-            parse("{ '_id' : 1, 'name' : 'Susan Wilkes', 'summary' : 'Doing great!' }"),
+        List<Document> expected = java.util.Arrays.asList(parse("{ '_id' : 1, 'name' : 'Susan Wilkes', 'summary' : 'Doing great!' }"),
             parse("{ '_id' : 2, 'name' : 'Bob Hanna', 'summary' : 'Needs improvement.' }"),
             parse("{ '_id' : 3, 'name' : 'James Torrelio', 'summary' : 'Doing great!' }"));
 
