@@ -3,6 +3,8 @@ package taglets;
 import com.sun.source.doctree.DocTree;
 
 import javax.lang.model.element.Element;
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
@@ -15,7 +17,7 @@ import static jdk.javadoc.doclet.Taglet.Location.TYPE;
 public class InternalTaglet extends DocTaglet {
     @Override
     public Set<Location> getAllowedLocations() {
-        return Set.of(METHOD, TYPE, PACKAGE, CONSTRUCTOR, FIELD);
+        return new HashSet<>(Arrays.asList(METHOD, TYPE, PACKAGE, CONSTRUCTOR, FIELD));
     }
 
     @Override
